--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/potapovDim/node-docker-mongo-training#readme",
   "dependecies": {},
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "ejs": "*"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
