--- a/package.json
+++ b/package.json
@@ -18,10 +18,25 @@
   "homepage": "https://github.com/potapovDim/node-docker-mongo-training#readme",
   "dependecies": {},
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "ejs": "*",
     "express": "^4.14.0",
-    "ejs": "*"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
     "nodemon": "^1.11.0"
   }
 }
