--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
